--- a/web/frontend/locales/en.json
+++ b/web/frontend/locales/en.json
@@ -7,7 +7,9 @@
     "yourAppIsReadyToExplore": "Your app is ready to explore! It contains everything you need to get started including the <PolarisLink>Polaris design system</PolarisLink>, <AdminApiLink>Shopify Admin API</AdminApiLink>, and <AppBridgeLink>App Bridge</AppBridgeLink> UI library and components."
   },
   "NavigationMenu": {
-    "plan":"Plan Page"
+    "plan":"Plan Page",
+    "customer":"Customer",
+    "setting":"Settings"
   },
   "NotFound": {
     "description": "Check the URL and try again, or use the search bar to find what you need.",
